# $Id$

2007-11-22	Konstantin V. Arkhipov

	* ext/src/core/Base/: Ternary implemented.

	* ext/src/core/OSQL/: OrderBy implemented.

2007-11-21	Konstantin V. Arkhipov

	* main/Utils/FullTextUtils.class.php: ObjectQuery replaced by
	Criteria.

2007-11-22	Dmitry E. Pismenny

	* main/Utils/DaoMoveHelper.class.php: ObjectQuery replaced by
	Criteria.

2007-11-17	Konstantin V. Arkhipov

	* ext/src/core/OSQL/: GroupBy and Joiner implemented.

	* ext/src/onphp.h: new macroses - ONPHP_CALL_PARENT_*,
	ONPHP_CALL_STATIC_*.

2007-11-15	Ivan Y. Khvostishkov

	* core/Base/Assert.class.php: circular linked objects cause a fatal
	error in var_export(), so dumping via print_r() now.

2007-11-14	Ivan Y. Khvostishkov

	* main/Utils/ArrayUtils.class.php: countNonemptyValues(): try to guess
	what it does.

2007-11-12	Dmitry E. Pismenny

	* main/Markup/Feed/FeedReader.class.php: errors from simplexml_load_file()
	translated into WrongStateExceptions.

2007-11-11	Konstantin V. Arkhipov

	* core/DB/Dialect.class.php: useless quoteValue() removed.

	* ext/src/core/Form/: Form and FormField implemented.

2007-11-07	Ivan Y. Khvostishkov

	* main/Utils/TextUtils.class.php: friendlyNumber(): bug with small
	orders fixed.

2007-11-07	Konstantin V. Arkhipov

	* ext/src/core/OSQL/: FromTable implemented.

	* ext/src/onphp.h: new macroses - ONPHP_FIND_FOREIGN_CLASS and
	ONPHP_ARRAY_GET.

2007-11-06	Konstantin V. Arkhipov

	* ext/src/core/Form/Filters/: Filtrator, BaseFilter implemented.

	* ext/src/core/Form/: PlainForm, RegulatedForm implemented.

	* ext/src/core/Primitives/: FiltrablePrimitive, PrimitiveNumber
	implemented.

	* etx/src/onphp.h: new macroses: ONPHP_MAKE_FOREIGN_OBJECT,
	ONPHP_FOREACH, ONPHP_ASSOC_ISSET, ONPHP_ASSOC_UNSET, ONPHP_ASSOC_SET,
	ONPHP_ASSOC_GET, ONPHP_PROPERTY_DESTRUCT, ONPHP_THROW and RETURN_THIS.

2007-11-04	Konstantin V. Arkhipov

	* main/DAOs/StorableDAO.class.php: added merge() which updates only